Fixed legacy button gap

--- a/packages/musubii/src/elements/button/legacy.css
+++ b/packages/musubii/src/elements/button/legacy.css
@@ -1,4 +1,5 @@
 .button {
+  --button-gap: 0;
   --button-border-radius: 3px;
   --button-font-weight: 400;
   --button-line-height: 1.5;
